--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="nav-item nav-link" href="#contact">Contact</a>
         </div>
       </div>
-    </nav><br>
+    </nav><br><br><br>
 
     <!-- SECTION -->
     <section id="header">
