--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <div class="container">
         <div class="row my-5">
           <div class="col-md-6">
-            <h2>Lorem repellat qui.</h2>
-            <p>Amet neque nulla enim ex adipisci. Dolorum maxime at mollitia eius explicabo maxime eaque hic eveniet corporis est officia corporis laudantium sed odit officia, voluptates iure in doloremque. Atque quo.</p>
+            <h2>Who is driving the customer.</h2>
+            <p>There is no gain from it. I will explain most of the pains, but above all its flexibility, and it will happen here that the body praises the duties of the body, but hates the duties, the pleasures become pain. And where.</p>
           </div>
           <div class="col-md-6">
             <h2>Dolor harum debitis!</h2>
