--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <p>There is no gain from it. I will explain most of the pains, but above all its flexibility, and it will happen here that the body praises the duties of the body, but hates the duties, the pleasures become pain. And where.</p>
           </div>
           <div class="col-md-6">
-            <h2>Dolor harum debitis!</h2>
-            <p>Ipsum neque ratione illo fuga numquam accusamus. Ipsam dolore non reprehenderit sed voluptatibus. Aut fugit repudiandae consectetur in obcaecati doloremque praesentium ratione. Laboriosam sapiente corrupti laboriosam aut velit quidem itaque.</p>
+            <h2>Sorrowful of these debts!</h2>
+            <p>We never charged him with that flight either. He will not blame her for the pain, but for the pleasures. Or else the flight from repudiation will follow in the blind and painful manner of the present. Therefore, the wise want to work hard for the corrupt.</p>
           </div>
         </div>
       </div>
