--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="header-content-right">
-              <h1 class="display-4">Sit asperiores voluptas atque autem?</h1>
-              <p class="mt-5">Amet possimus omnis dolore aliquid quam. Officiis nulla nam laudantium iure amet. Debitis maiores enim modi porro sunt. Ratione harum quasi odit nemo rerum eveniet dolorem quas rem asperiores voluptate!</p>
+              <h1 class="display-4">Let the pleasure be rougher, and yet?</h1>
+              <p class="mt-5">We can do something with all the pain. For there is no service for those who praise by right. There are still more ways to deal with major debts. On the basis of these, no one hates the pain of things that are worse than pleasure!</p>
               <a href="#" class="btn btn-outline-secondary header-btn btn-lg mt-2">Read More</a>
             </div>
           </div>
@@ -52,7 +52,7 @@
     <section id="testimonial">
       <div class="container">
         <p class="h2 mb-2">
-          Consectetur esse incidunt voluptatibus modi quae ipsa eos corrupti ad rerum? Modi natus necessitatibus eaque illum voluptas accusamus aliquid ipsum consectetur? Voluptate voluptate in deleniti amet itaque eius? Impedit sapiente?
+          Is it possible that they fall into the pleasures of the way that they themselves are corrupted to things? If we accuse him of being born of necessity and that pleasure, will something really follow him? So, is his pleasure in the sweet pleasure? Does it hinder the wise?
         </p>
         <p class="h4">- Ryan Ray</p>
       </div>
@@ -68,8 +68,8 @@
           </div>
           <div class="col-md-6 my-auto">
             <div class="info-right">
-              <h2>Consectetur magnam quos voluptatibus laboriosam.</h2>
-              <p>Amet vero earum quis modi ad? Voluptate id nihil harum mollitia exercitationem, dolores mollitia minus voluptates repellat esse. Dignissimos consectetur libero mollitia nihil enim. Nam pariatur veritatis ratione temporibus nisi!</p>
+              <h2>It will be a great success for those who are laborious with pleasures.</h2>
+              <p>Who really likes them? With pleasure, nothing repels the exercise of these suppleness, the pains of suppleness less the pleasures. The most worthy will be pursued by free flexibility, for nothing. For the reason of the truth should be borne in the times, unless!</p>
               <a href="#" class="btn btn-outline-secondary btn-lg">Read More</a>
             </div>
           </div>
